removed directory.clear as it is not carefully designed