@@ -61,16 +61,28 @@
     <build>
         <plugins>
             <plugin>
+                <!-- MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m" NOT USED by forked jvm!!  -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.3</version>
+                <!-- could it be that maven requires a bit too much RAM while testing? -->
+                <configuration>
+                    <argLine>-Xmx140m -Xms140m</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -89,8 +101,7 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
-    
+    </build>    
     
     <repositories>
         
